[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/environment/LiftDoors-Sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/environment/LiftBackground.png" type="Texture" id=3]
[ext_resource path="res://room_templates/LiftButton.gd" type="Script" id=4]
[ext_resource path="res://assets/environment/LiftButtonRed.png" type="Texture" id=5]
[ext_resource path="res://room_templates/lift_arrival.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 1224, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 1020, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 816, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 612, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 408, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 204, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 204, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 408, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 612, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 816, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 1020, 0, 204, 143 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 1224, 0, 204, 143 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "Close",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 14 ), SubResource( 14 ), SubResource( 14 ) ],
"loop": false,
"name": "Open",
"speed": 10.0
} ]

[node name="ExitLift" type="Node2D"]
script = ExtResource( 7 )

[node name="LiftBackground" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )

[node name="LiftDoors" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
frames = SubResource( 15 )
animation = "Open"

[node name="LiftButton" type="Sprite" parent="."]
position = Vector2( 47.9961, 9.0217 )
texture = ExtResource( 5 )
script = ExtResource( 4 )
[connection signal="animation_finished" from="LiftDoors" to="." method="_on_LiftDoors_animation_finished"]
